--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,22 +2,45 @@
 name = "shellchat"
 version = "0.1.0"
 edition = "2021"
+authors = ["Eugen Eisler <eoeisler@gmail.com>"]
+description = "Executes shell commands based on provided prompts"
+license = "MIT"
+homepage = "https://github.com/eugeis/shellchat"
+repository = "https://github.com/eugeis/shellchat"
+categories = ["command-line-utilities"]
+keywords = ["chatgpt", "llm", "cli", "gpt", "repl"]
 
 [dependencies]
 actix-web = "4" # or the latest version you prefer
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 reqwest = { version = "0.12.5", features = ["json", "blocking"] }
-clap = { version = "4.5.16", features = ["env"]}
+clap = { version = "4.5.16", features = ["env", "derive"] }
+serde_yaml = "0.9"
+anyhow = "1.0.86"
+async-trait = "0.1.81"
+lazy_static = "1.5.0"
+fancy-regex = "0.13.0"
+uuid = { version = "1.9.1", features = ["v4"] }
+shell-words = "1.1.0"
+simplelog = "0.12.1"
+log = "0.4.20"
+inquire = "0.7.5"
+async-recursion = "1.1.1"
+tokio = { version = "1.34.0", features = ["rt", "time", "macros", "signal", "rt-multi-thread"] }
+tokio-graceful = "0.1.6"
+tokio-stream = { version = "0.1.15", default-features = false, features = ["sync"] }
+crossterm = "0.28.1"
+is-terminal = "0.4.9"
 
 [lib]
 name = "shellchat_lib"
-path = "src/lib.rs"
+path = "src/lib/mod.rs"
 
 [[bin]]
-name = "server"
+name = "sc-server"
 path = "src/bin/server.rs"
 
 [[bin]]
-name = "client"
+name = "sc"
 path = "src/bin/client.rs"
