--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "shellchat"
-version = "1.0.0"
+version = "1.0.1"
 edition = "2021"
 authors = ["Eugen Eisler <eoeisler@gmail.com>"]
 description = "Transforms natural language into shell commands for execution or explanation."
@@ -37,8 +37,8 @@ path = "src/lib/mod.rs"
 
 [[bin]]
 name = "sc-serve"
-path = "src/bin/server.rs"
+path = "src/bin/sc-serve.rs"
 
 [[bin]]
 name = "sc"
-path = "src/bin/client.rs"
+path = "src/bin/sc.rs"
