--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -54,3 +54,53 @@ jobs:
         with:
           name: binaries-${{ matrix.os_name }}-${{ matrix.target }}
           path: target/${{ matrix.target }}/release
+
+  docker:
+
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Download binaries
+        uses: actions/download-artifact@v2
+        with:
+          name: binaries-linux-x86_64-unknown-linux-gnu
+
+      - name: Build Docker image
+        run: docker build -t sc-serve .
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Push Docker image
+        run: |
+          docker tag sc-serve ghcr.io/${{ github.repository }}/sc-serve:latest
+          docker push ghcr.io/${{ github.repository }}/sc-serve:latest
+
+  publish:
+
+    runs-on: ubuntu-latest
+
+    needs: build
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Set up Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+
+      - name: Publish to Crates.io
+        run: cargo publish
+        env:
+          CARGO_REGISTRY_TOKEN: ${{ secrets.CARGO_REGISTRY_TOKEN }}
