--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -41,18 +41,25 @@ jobs:
         run: |
           brew install openssl
           export OPENSSL_DIR=$(brew --prefix openssl)
+          export PKG_CONFIG_PATH=$PKG_CONFIG_PATH:$OPENSSL_DIR/lib/pkgconfig
+        shell: bash
+
+      - name: Install pkg-config on Linux
+        if: matrix.os == 'ubuntu-latest'
+        run: sudo apt-get install -y pkg-config libssl-dev
 
       - name: Build
         run: cargo build --release --target ${{ matrix.target }} --bins
         env:
           OPENSSL_DIR: ${{ env.OPENSSL_DIR }}
+          PKG_CONFIG_PATH: ${{ env.PKG_CONFIG_PATH }}
         continue-on-error: true
 
       - name: Upload binaries
         if: always()
         uses: actions/upload-artifact@v2
         with:
-          name: binaries-${{ matrix.os_name }}-${{ matrix.target }}
+          name: binaries-${{ matrix.os }}-${{ matrix.target }}
           path: |
             target/${{ matrix.target }}/release/sc
             target/${{ matrix.target }}/release/sc-serve
