--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,10 +37,10 @@ jobs:
       - uses: Swatinem/rust-cache@v2
 
       - name: Test
-        run: cargo test --all
+        run: cargo test --all --all-targets
 
       - name: Clippy
         run: cargo clippy --all --all-targets -- -D warnings
 
       - name: Format
-        run: cargo fmt --all --check
+        run: cargo fmt --all --all-targets --check
