--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,4 +43,4 @@ jobs:
         run: cargo clippy --all --all-targets -- -D warnings
 
       - name: Format
-        run: cargo fmt --all --all-targets --check
+        run: cargo fmt --all --check
