ci: fix powershell part

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -75,12 +75,10 @@ jobs:
           fi
 
       - name: Install System Dependencies
-        if: startsWith(matrix.target, 'x86_64') || startsWith(matrix.target, 'i686') || startsWith(matrix.target, 'armv7') || startsWith(matrix.target, 'arm')
+        if: ${{ runner.os == 'Linux' }}
         run: |
-          if [[ "$RUNNER_OS" == "Linux" ]]; then
-            sudo apt-get update
-            sudo apt-get install -y pkg-config libssl-dev
-          fi
+          sudo apt-get update
+          sudo apt-get install -y pkg-config libssl-dev
 
       - name: Install Rust Toolchain Components
         uses: dtolnay/rust-toolchain@stable
