--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ crossterm = "0.28.1"
 tracing = "0.1"
 tracing-subscriber = "0.3"
 tracing-appender = "0.2"
+openssl = { version = "0.10", features = ["vendored"] }
 
 [lib]
 name = "sc_lib"
