--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   release:
-    name: Publish to GitHub Release
+    name: Release
     continue-on-error: true
     permissions:
       contents: write
