--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,8 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 tracing-appender = "0.2"
 thiserror = "1.0.63"
+futures = "0.3.30"
+actix-rt = "2"
 
 [lib]
 name = "shc_lib"
