--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "shellchat"
-version = "1.0.27"
+version = "1.0.30"
 edition = "2021"
 authors = ["Eugen Eisler <eoeisler@gmail.com>"]
 description = "Transforms natural language into shell commands for execution or explanation."
@@ -33,6 +33,7 @@ tracing-appender = "0.2"
 thiserror = "1.0.63"
 futures = "0.3.30"
 actix-rt = "2"
+termimad = "0.30.0"
 
 [lib]
 name = "shc_lib"
